// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Steps /> rendering horizontal render container should have flex-direction row and align-items center 1`] = `
<DocumentFragment>
  .c3 {
  text-align: center;
  width: var(--circleDiam);
  height: var(--circleDiam);
  font-weight: 500;
  font-size: calc(var(--circleDiam) / 2);
  color: #F9F9F9;
  background: #151515;
  border: 0.1em solid #151515;
  border-radius: 50%;
  line-height: var(--circleDiam);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  text-align: center;
  width: var(--circleDiam);
  height: var(--circleDiam);
  font-weight: 500;
  font-size: calc(var(--circleDiam) / 2);
  color: #F9F9F9;
  background: #A4A4A4;
  border: 0.1em solid #A4A4A4;
  border-radius: 50%;
  line-height: var(--circleDiam);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  text-align: center;
  color: #151515;
  font-size: calc(var(--circleDiam) / 2);
  padding: 0.25em;
  font-weight: 400;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  --lineWidth: 4px;
  --circleDiam: 2rem;
  --verticalPaddingBottom: 4rem;
  --verticalGap: 2rem;
  --verticalBottom: 1rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #151515;
  text-align: center;
}

.c1:before {
  position: relative;
  z-index: 1;
  display: block;
}

.c1:first-child {
  padding-top: var(--lineWidth);
}

.c1:not(:first-child):before {
  content: "";
  background-color: #151515;
  width: calc(100% - var(--circleDiam));
  height: var(--lineWidth);
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  right: calc(50% - var(--circleDiam) / 2 - 0.25%);
  top: 1.25rem;
}

.c5 {
  --lineWidth: 4px;
  --circleDiam: 2rem;
  --verticalPaddingBottom: 4rem;
  --verticalGap: 2rem;
  --verticalBottom: 1rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #A4A4A4;
  text-align: center;
}

.c5:before {
  position: relative;
  z-index: 1;
  display: block;
}

.c5:first-child {
  padding-top: var(--lineWidth);
}

.c5:not(:first-child):before {
  content: "";
  background-color: #A4A4A4;
  width: calc(100% - var(--circleDiam));
  height: var(--lineWidth);
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  right: calc(50% - var(--circleDiam) / 2 - 0.25%);
  top: 1.25rem;
}

.c0 {
  font-family: 'Poppins',sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

<div
    class="c0"
    orientation="horizontal"
  >
    <div
      class="c1"
      orientation="horizontal"
    >
      <div
        class="c2"
        orientation="horizontal"
      >
        <span
          class="c3"
        >
          1
        </span>
        <span
          class="c4"
        >
          open the fridge
        </span>
      </div>
    </div>
    <div
      class="c5"
      orientation="horizontal"
    >
      <div
        class="c2"
        orientation="horizontal"
      >
        <span
          class="c6"
        >
          2
        </span>
        <span
          class="c4"
        >
          take ice cream out
        </span>
      </div>
    </div>
    <div
      class="c5"
      orientation="horizontal"
    >
      <div
        class="c2"
        orientation="horizontal"
      >
        <span
          class="c6"
        >
          3
        </span>
        <span
          class="c4"
        >
          eat the ice cream
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Steps /> rendering renders horizontal 3 steps by default 1`] = `
<DocumentFragment>
  .c3 {
  text-align: center;
  width: var(--circleDiam);
  height: var(--circleDiam);
  font-weight: 500;
  font-size: calc(var(--circleDiam) / 2);
  color: #F9F9F9;
  background: #151515;
  border: 0.1em solid #151515;
  border-radius: 50%;
  line-height: var(--circleDiam);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  text-align: center;
  width: var(--circleDiam);
  height: var(--circleDiam);
  font-weight: 500;
  font-size: calc(var(--circleDiam) / 2);
  color: #F9F9F9;
  background: #A4A4A4;
  border: 0.1em solid #A4A4A4;
  border-radius: 50%;
  line-height: var(--circleDiam);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  text-align: center;
  color: #151515;
  font-size: calc(var(--circleDiam) / 2);
  padding: 0.25em;
  font-weight: 400;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  --lineWidth: 4px;
  --circleDiam: 2rem;
  --verticalPaddingBottom: 4rem;
  --verticalGap: 2rem;
  --verticalBottom: 1rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #151515;
  text-align: center;
}

.c1:before {
  position: relative;
  z-index: 1;
  display: block;
}

.c1:first-child {
  padding-top: var(--lineWidth);
}

.c1:not(:first-child):before {
  content: "";
  background-color: #151515;
  width: calc(100% - var(--circleDiam));
  height: var(--lineWidth);
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  right: calc(50% - var(--circleDiam) / 2 - 0.25%);
  top: 1.25rem;
}

.c5 {
  --lineWidth: 4px;
  --circleDiam: 2rem;
  --verticalPaddingBottom: 4rem;
  --verticalGap: 2rem;
  --verticalBottom: 1rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #A4A4A4;
  text-align: center;
}

.c5:before {
  position: relative;
  z-index: 1;
  display: block;
}

.c5:first-child {
  padding-top: var(--lineWidth);
}

.c5:not(:first-child):before {
  content: "";
  background-color: #A4A4A4;
  width: calc(100% - var(--circleDiam));
  height: var(--lineWidth);
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  right: calc(50% - var(--circleDiam) / 2 - 0.25%);
  top: 1.25rem;
}

.c0 {
  font-family: 'Poppins',sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

<div
    class="c0"
    orientation="horizontal"
  >
    <div
      class="c1"
      orientation="horizontal"
    >
      <div
        class="c2"
        orientation="horizontal"
      >
        <span
          class="c3"
        >
          1
        </span>
        <span
          class="c4"
        >
          open the fridge
        </span>
      </div>
    </div>
    <div
      class="c5"
      orientation="horizontal"
    >
      <div
        class="c2"
        orientation="horizontal"
      >
        <span
          class="c6"
        >
          2
        </span>
        <span
          class="c4"
        >
          take ice cream out
        </span>
      </div>
    </div>
    <div
      class="c5"
      orientation="horizontal"
    >
      <div
        class="c2"
        orientation="horizontal"
      >
        <span
          class="c6"
        >
          3
        </span>
        <span
          class="c4"
        >
          eat the ice cream
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Steps /> rendering vertical render container should have flex-direction column and align-items flex-start 1`] = `
<DocumentFragment>
  .c3 {
  text-align: center;
  width: var(--circleDiam);
  height: var(--circleDiam);
  font-weight: 500;
  font-size: calc(var(--circleDiam) / 2);
  color: #F9F9F9;
  background: #151515;
  border: 0.1em solid #151515;
  border-radius: 50%;
  line-height: var(--circleDiam);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  text-align: center;
  width: var(--circleDiam);
  height: var(--circleDiam);
  font-weight: 500;
  font-size: calc(var(--circleDiam) / 2);
  color: #F9F9F9;
  background: #A4A4A4;
  border: 0.1em solid #A4A4A4;
  border-radius: 50%;
  line-height: var(--circleDiam);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  text-align: center;
  color: #151515;
  font-size: calc(var(--circleDiam) / 2);
  padding: 0.25em;
  font-weight: 400;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  --lineWidth: 4px;
  --circleDiam: 2rem;
  --verticalPaddingBottom: 4rem;
  --verticalGap: 2rem;
  --verticalBottom: 1rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #151515;
  text-align: center;
}

.c1:before {
  position: relative;
  z-index: 1;
  display: block;
  height: calc(var(--verticalPaddingBottom) + var(--verticalBottom) * 2);
}

.c1:first-child {
  padding-top: var(--lineWidth);
}

.c1:not(:first-child):before {
  content: "";
  background-color: #151515;
  width: var(--lineWidth);
  left: calc(var(--circleDiam) / 2);
  height: calc(var(--verticalPaddingBottom) + var(--verticalBottom) * 2);
}

.c5 {
  --lineWidth: 4px;
  --circleDiam: 2rem;
  --verticalPaddingBottom: 4rem;
  --verticalGap: 2rem;
  --verticalBottom: 1rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #A4A4A4;
  text-align: center;
}

.c5:before {
  position: relative;
  z-index: 1;
  display: block;
  height: calc(var(--verticalPaddingBottom) + var(--verticalBottom) * 2);
}

.c5:first-child {
  padding-top: var(--lineWidth);
}

.c5:not(:first-child):before {
  content: "";
  background-color: #A4A4A4;
  width: var(--lineWidth);
  left: calc(var(--circleDiam) / 2);
  height: calc(var(--verticalPaddingBottom) + var(--verticalBottom) * 2);
}

.c0 {
  font-family: 'Poppins',sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  height: 100%;
}

<div
    class="c0"
    orientation="vertical"
  >
    <div
      class="c1"
      orientation="vertical"
    >
      <div
        class="c2"
        orientation="vertical"
      >
        <span
          class="c3"
        >
          1
        </span>
        <span
          class="c4"
        >
          open the fridge
        </span>
      </div>
    </div>
    <div
      class="c5"
      orientation="vertical"
    >
      <div
        class="c2"
        orientation="vertical"
      >
        <span
          class="c6"
        >
          2
        </span>
        <span
          class="c4"
        >
          take ice cream out
        </span>
      </div>
    </div>
    <div
      class="c5"
      orientation="vertical"
    >
      <div
        class="c2"
        orientation="vertical"
      >
        <span
          class="c6"
        >
          3
        </span>
        <span
          class="c4"
        >
          eat the ice cream
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
